syntax = "proto3";

package train;

option go_package = "proto;train";

service train {
  rpc GetStationList (GetStationListRequest) returns (GetStationListReply) {}
  rpc SearchStation (SearchStationRequest) returns (SearchStationReply) {}
  rpc GetScheduleList (GetScheduleListRequest) returns (GetScheduleListReply) {}
  rpc GetStops (GetStopsRequest) returns (GetStopsReply) {}

}

message GetStationListRequest {
  string InitialName = 1;
}

message Station {
  int64 ID = 1;
  string StationName = 2;
}

message GetStationListReply {
  repeated Station StationList = 1;
}

message SearchStationRequest {
  string Key = 1;
}

message SearchStationReply {
  repeated Station StationList = 1;
}

// TODO
message GetScheduleListRequest {
  int64 ScheduleID = 1;
}

message Schedule {
  int64 ID = 1;
  int64 TrainNo = 2;
  int64 TrainType = 3;
  string StartTime = 4;
  string EndTime = 5;
  string Duration = 6;
  string StartStationName = 7;
  string EndStationName = 8;
}

message GetScheduleListReply {
  repeated Schedule ScheduleList = 1;
}

message GetStopsRequest {
  int64 ScheduleID = 1;
}

message Stop {
  int64 NO = 1;
  string StartTime = 2;
  string EndTime = 3;
  int64 Duration = 4;
  string StartStationName = 6;
  string EndStationName = 7;
}

message GetStopsReply {
  repeated Stop stops = 1;
}
